expose the parent column or row's name, to aid in debugging.  Allow it to be changed.